background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,11 @@ body {
   background-image: url("../resources/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100vw 100vh;
+  background-size: 100% 100%;
   font-family: pokemonFontSolid;
   background-position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
 
 .navbar {
